# chess_engine

./: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  board.hpp  evaluate.cpp  magic.hpp  main.cpp
